BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Network_Object_Mapping_vod__c.object
<CustomObject>
    <description>Stores information of CRM objects mapping with Network objects.</description>
    <fields>
        <fullName>CRM_Object_API_Name_vod__c</fullName>
        <description>CRM object API name</description>
        <label>CRM Object API Name</label>
        <length>43</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_API_Name_vod__c</fullName>
        <description>API name of the CRM object field that matches Network ID.</description>
        <label>External ID API Name</label>
        <length>43</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for use in loading and migration of mapping configuration.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Network_Mapping_vod__c</fullName>
        <description>Link to Network Mapping</description>
        <label>Network Mapping</label>
        <referenceTo>Network_Mapping_vod__c</referenceTo>
        <relationshipLabel>Network Object Mappings</relationshipLabel>
        <relationshipName>Network_Object_Mappings_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Network_Object_API_Name_vod__c</fullName>
        <description>Network object API name</description>
        <label>Network Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Account_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Person Account mappings. Should be set to True for the following mappings:
HCP - Account, HCP Address - Address, HCP Licence - Address, Parent HCO for HCP - Child Account</description>
        <label>Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Key_vod__c</fullName>
        <description>Unique key preventing duplicate object mappings within the same Network Mapping.  Handled automatically by trigger.</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Notes_vod__c</fullName>
        <description>Validation status description if Validation Status is &quot;Invalid&quot;</description>
        <label>Validation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status_vod__c</fullName>
        <description>Mapping validation status</description>
        <inlineHelpText>Mapping validation status</inlineHelpText>
        <label>Validation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unvalidated_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Valid_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Network Object Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NOM{000000000}</displayFormat>
        <label>Object Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Object Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>